Enhance data models and APIs: add fields for family information in SinhVien and related DTOs; update NganhDTO with maKhoa; modify Lop and GiangVien entities for better relationships; adjust application properties for service URLs.